# constrained_lqr_elimination

./: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  cuda_config.bzl
.github/workflows/: ci.yml
benchmarks/: clqr_benchmark.cc  cuda_benchmark.cc  cuda_benchmark_problem.h
include/clqr/: clqr.h  cuda.h  linalg.h
notebooks/: kaggle_cuda_benchmark.ipynb  kaggle_cuda_stress.ipynb
python/: clqr_module.cc  jax_ffi_cpu.cc  jax_ffi_cpu.h  jax_ffi_cpu_module.cc  jax_ffi_cuda.cu  jax_ffi_cuda.h  jax_ffi_cuda_module.cc  jax_ffi_problem.cc  jax_ffi_problem.h
python/clqr/: __init__.py  jax.py
scripts/: colab_t4.sh  compare_cuda_revisions.sh  notebook_bazel.sh  notebook_cuda.sh  notebook_cuda_stress.sh
src/: clqr.cc  cuda_internal.h  cuda_solver.cu  cuda_stub.cc  linalg.cc  multiplier_recovery.h
tests/: ADVERSARIAL_COVERAGE.md  adversarial_cpu_test.cc  adversarial_cuda_test.cc  adversarial_test_support.h  clqr_test.cc  cross_validate_jax.py  cuda_jax_fixture.cc  cuda_jax_problem.h  cuda_kernel_emulation_test.cc  cuda_solver_test.cc  cuda_stub_test.cc  jax_binding_test.py  jax_cuda_binding_test.py  python_binding_test.py  python_binding_test_runner.cc  workspace_allocation_test.cc
tests/emulated_cuda/: cuda_runtime.h
tests/fake_cuda/: cuda_runtime.h
