load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load(
    "@rules_cuda//cuda:defs.bzl",
    "cuda_library",
    "requires_cuda",
)
load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension")
load(
    "//:cuda_config.bzl",
    "cuda_capacity_defines",
    "declare_cuda_capacity_flags",
)

declare_cuda_capacity_flags()

config_setting(
    name = "fp32",
    define_values = {"clqr_precision": "fp32"},
)

CUDA_CAPACITY_DEFINES = cuda_capacity_defines()

cc_library(
    name = "clqr",
    srcs = [
        "src/clqr.cc",
        "src/linalg.cc",
    ],
    hdrs = [
        "include/clqr/clqr.h",
        "include/clqr/linalg.h",
    ],
    defines = select({
        ":fp32": ["CLQR_USE_FLOAT=1"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "clqr_test",
    srcs = ["tests/clqr_test.cc"],
    deps = [":clqr"],
)

cc_test(
    name = "workspace_allocation_test",
    srcs = ["tests/workspace_allocation_test.cc"],
    deps = [":clqr"],
)

cc_library(
    name = "clqr_cuda_stub",
    srcs = ["src/cuda_stub.cc"],
    hdrs = ["include/clqr/cuda.h"],
    defines = CUDA_CAPACITY_DEFINES,
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_stub_test",
    srcs = ["tests/cuda_stub_test.cc"],
    deps = [":clqr_cuda_stub"],
)

cuda_library(
    name = "clqr_cuda",
    srcs = ["src/cuda_solver.cu"],
    hdrs = [
        "include/clqr/cuda.h",
        "src/cuda_internal.h",
    ],
    alwayslink = True,
    copts = [
        "--expt-relaxed-constexpr",
        "-lineinfo",
        "-Wno-deprecated-gpu-targets",
    ],
    defines = CUDA_CAPACITY_DEFINES,
    host_copts = ["-std=c++17"],
    includes = ["include"],
    target_compatible_with = requires_cuda(),
    visibility = ["//visibility:public"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_solver_test",
    srcs = [
        "benchmarks/cuda_benchmark_problem.h",
        "tests/cuda_solver_test.cc",
    ],
    tags = [
        "manual",
        "requires-gpu",
    ],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_binary(
    name = "clqr_cuda_jax_fixture",
    srcs = [
        "tests/cuda_jax_fixture.cc",
        "tests/cuda_jax_problem.h",
    ],
    tags = ["manual"],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_binary(
    name = "clqr_cuda_benchmark",
    srcs = [
        "benchmarks/cuda_benchmark.cc",
        "benchmarks/cuda_benchmark_problem.h",
    ],
    tags = ["manual"],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_library(
    name = "cuda_kernel_emulation_sources",
    hdrs = [
        "include/clqr/cuda.h",
        "src/cuda_internal.h",
        "tests/emulated_cuda/cuda_runtime.h",
    ],
    includes = [
        "include",
        "tests/emulated_cuda",
    ],
    defines = CUDA_CAPACITY_DEFINES,
    textual_hdrs = ["src/cuda_solver.cu"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_kernel_emulation_test",
    srcs = [
        "benchmarks/cuda_benchmark_problem.h",
        "tests/cuda_jax_problem.h",
        "tests/cuda_kernel_emulation_test.cc",
    ],
    copts = ["-Wno-sometimes-uninitialized"],
    deps = [
        ":clqr",
        ":cuda_kernel_emulation_sources",
    ],
)

nanobind_extension(
    name = "_clqr",
    srcs = ["python/clqr_module.cc"],
    deps = [":clqr"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "python_binding_test",
    srcs = ["tests/python_binding_test_runner.cc"],
    data = [
        ":_clqr",
        "tests/python_binding_test.py",
    ],
)

cc_binary(
    name = "clqr_benchmark",
    srcs = ["benchmarks/clqr_benchmark.cc"],
    copts = ["-DNDEBUG"],
    deps = [":clqr"],
)
