load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_python//python:defs.bzl", "py_test")
load("@clqr_pip//:requirements.bzl", "requirement")
load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension")

config_setting(
    name = "fp32",
    define_values = {"clqr_precision": "fp32"},
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:osx"],
)

cc_library(
    name = "clqr",
    srcs = [
        "src/clqr.cc",
        "src/linalg.cc",
    ],
    hdrs = [
        "include/clqr/clqr.h",
        "include/clqr/linalg.h",
    ],
    defines = select({
        ":fp32": ["CLQR_USE_FLOAT=1"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "clqr_test",
    srcs = ["tests/clqr_test.cc"],
    deps = [":clqr"],
)

cc_test(
    name = "workspace_allocation_test",
    srcs = ["tests/workspace_allocation_test.cc"],
    deps = [":clqr"],
)

nanobind_extension(
    name = "_clqr",
    srcs = ["python/clqr_module.cc"],
    # Nanobind deliberately uses a zero-length-array extension. Keep all
    # other warnings enabled and fatal in this translation unit.
    copts = select({
        ":linux": ["-Wno-pedantic"],
        ":macos": [
            "-Wno-nested-anon-types",
            "-Wno-zero-length-array",
        ],
        "//conditions:default": [],
    }),
    deps = [":clqr"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

py_test(
    name = "python_binding_test",
    srcs = ["tests/python_binding_test.py"],
    data = [":_clqr"],
    deps = [requirement("numpy")],
)

cc_binary(
    name = "clqr_benchmark",
    srcs = ["benchmarks/clqr_benchmark.cc"],
    copts = ["-DNDEBUG"],
    deps = [":clqr"],
)
