load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_python//python:defs.bzl", "py_test")
load("@clqr_pip//:requirements.bzl", "requirement")
load(
    "@rules_cuda//cuda:defs.bzl",
    "cuda_library",
    "requires_cuda",
)
load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension")
load("@rules_python//python:pip.bzl", "whl_filegroup")

config_setting(
    name = "fp32",
    define_values = {"clqr_precision": "fp32"},
)

whl_filegroup(
    name = "jaxlib_ffi_header_files",
    pattern = "jaxlib/include/xla/ffi/api/.*\\.h",
    whl = "@clqr_pip//jaxlib:whl",
)

cc_library(
    name = "jaxlib_ffi_headers",
    hdrs = [":jaxlib_ffi_header_files"],
    includes = ["jaxlib_ffi_header_files/jaxlib/include"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "jax_ffi_problem",
    srcs = ["python/jax_ffi_problem.cc"],
    hdrs = ["python/jax_ffi_problem.h"],
    deps = [":clqr"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:osx"],
)

cc_library(
    name = "clqr",
    srcs = [
        "src/clqr.cc",
        "src/linalg.cc",
    ],
    hdrs = [
        "include/clqr/clqr.h",
        "include/clqr/linalg.h",
    ],
    defines = select({
        ":fp32": ["CLQR_USE_FLOAT=1"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "clqr_test",
    srcs = ["tests/clqr_test.cc"],
    deps = [":clqr"],
)

cc_library(
    name = "adversarial_test_support",
    hdrs = ["tests/adversarial_test_support.h"],
    includes = ["tests"],
    testonly = True,
    deps = [":clqr"],
)

cc_test(
    name = "adversarial_cpu_test",
    srcs = ["tests/adversarial_cpu_test.cc"],
    deps = [
        ":adversarial_test_support",
        ":clqr",
    ],
)

cc_test(
    name = "adversarial_cpu_extended_test",
    srcs = ["tests/adversarial_cpu_test.cc"],
    args = ["--extended"],
    size = "large",
    tags = ["manual"],
    deps = [
        ":adversarial_test_support",
        ":clqr",
    ],
)

cc_test(
    name = "workspace_allocation_test",
    srcs = ["tests/workspace_allocation_test.cc"],
    deps = [":clqr"],
)

cc_library(
    name = "clqr_cuda_stub",
    srcs = ["src/cuda_stub.cc"],
    hdrs = ["include/clqr/cuda.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_stub_test",
    srcs = ["tests/cuda_stub_test.cc"],
    deps = [":clqr_cuda_stub"],
)

cuda_library(
    name = "clqr_cuda",
    srcs = ["src/cuda_solver.cu"],
    hdrs = [
        "include/clqr/cuda.h",
        "src/cuda_internal.h",
    ],
    alwayslink = True,
    copts = [
        "--expt-relaxed-constexpr",
        "-lineinfo",
        "-Wno-deprecated-gpu-targets",
    ],
    host_copts = ["-std=c++17"],
    includes = ["include"],
    target_compatible_with = requires_cuda(),
    visibility = ["//visibility:public"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_solver_test",
    srcs = [
        "benchmarks/cuda_benchmark_problem.h",
        "tests/cuda_solver_test.cc",
    ],
    tags = [
        "manual",
        "requires-gpu",
    ],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_test(
    name = "adversarial_cuda_test",
    srcs = ["tests/adversarial_cuda_test.cc"],
    tags = [
        "manual",
        "requires-gpu",
    ],
    target_compatible_with = requires_cuda(),
    deps = [
        ":adversarial_test_support",
        ":clqr_cuda",
    ],
)

cc_test(
    name = "adversarial_cuda_extended_test",
    srcs = ["tests/adversarial_cuda_test.cc"],
    args = ["--extended"],
    size = "large",
    tags = [
        "manual",
        "requires-gpu",
    ],
    target_compatible_with = requires_cuda(),
    deps = [
        ":adversarial_test_support",
        ":clqr_cuda",
    ],
)

cc_binary(
    name = "clqr_cuda_jax_fixture",
    srcs = [
        "tests/cuda_jax_fixture.cc",
        "tests/cuda_jax_problem.h",
    ],
    tags = ["manual"],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_binary(
    name = "clqr_cuda_benchmark",
    srcs = [
        "benchmarks/cuda_benchmark.cc",
        "benchmarks/cuda_benchmark_problem.h",
    ],
    tags = ["manual"],
    target_compatible_with = requires_cuda(),
    deps = [":clqr_cuda"],
)

cc_library(
    name = "cuda_kernel_emulation_sources",
    hdrs = [
        "include/clqr/cuda.h",
        "src/cuda_internal.h",
        "tests/emulated_cuda/cuda_runtime.h",
    ],
    includes = [
        "include",
        "tests/emulated_cuda",
    ],
    textual_hdrs = ["src/cuda_solver.cu"],
    deps = [":clqr"],
)

cc_test(
    name = "cuda_kernel_emulation_test",
    srcs = [
        "benchmarks/cuda_benchmark_problem.h",
        "tests/cuda_jax_problem.h",
        "tests/cuda_kernel_emulation_test.cc",
    ],
    # The emulator executes every CUDA block with one host thread. GCC and
    # Clang cannot infer that thread zero initializes each emulated __shared__
    # scalar before the no-op synchronization barrier.
    copts = select({
        ":linux": ["-Wno-maybe-uninitialized"],
        ":macos": ["-Wno-sometimes-uninitialized"],
        "//conditions:default": [],
    }),
    deps = [
        ":adversarial_test_support",
        ":clqr",
        ":cuda_kernel_emulation_sources",
    ],
)

cc_test(
    name = "cuda_kernel_emulation_extended_test",
    srcs = [
        "benchmarks/cuda_benchmark_problem.h",
        "tests/cuda_jax_problem.h",
        "tests/cuda_kernel_emulation_test.cc",
    ],
    args = ["--extended"],
    size = "large",
    tags = ["manual"],
    copts = select({
        ":linux": ["-Wno-maybe-uninitialized"],
        ":macos": ["-Wno-sometimes-uninitialized"],
        "//conditions:default": [],
    }),
    deps = [
        ":adversarial_test_support",
        ":clqr",
        ":cuda_kernel_emulation_sources",
    ],
)

nanobind_extension(
    name = "_clqr",
    srcs = ["python/clqr_module.cc"],
    # Nanobind deliberately uses a zero-length-array extension. Keep all
    # other warnings enabled and fatal in this translation unit.
    copts = select({
        ":linux": ["-Wno-pedantic"],
        ":macos": [
            "-Wno-nested-anon-types",
            "-Wno-zero-length-array",
        ],
        "//conditions:default": [],
    }),
    deps = [":clqr"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

nanobind_extension(
    name = "_clqr_jax_cpu",
    srcs = [
        "python/jax_ffi_cpu.cc",
        "python/jax_ffi_cpu.h",
        "python/jax_ffi_cpu_module.cc",
    ],
    copts = select({
        ":linux": [
            "-Wno-pedantic",
            "-Wno-sign-compare",
            "-Wno-unused-parameter",
        ],
        ":macos": [
            "-Wno-gnu-zero-variadic-macro-arguments",
            "-Wno-nested-anon-types",
            "-Wno-sign-compare",
            "-Wno-unused-parameter",
            "-Wno-zero-length-array",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":clqr",
        ":jax_ffi_problem",
        ":jaxlib_ffi_headers",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cuda_library(
    name = "jax_ffi_cuda_handler",
    srcs = ["python/jax_ffi_cuda.cu"],
    hdrs = ["python/jax_ffi_cuda.h"],
    copts = ["-Wno-deprecated-gpu-targets"],
    host_copts = [
        "-std=c++17",
        "-Wno-pedantic",
        "-Wno-sign-compare",
        "-Wno-unused-parameter",
    ],
    target_compatible_with = requires_cuda(),
    deps = [
        ":clqr_cuda",
        ":jax_ffi_problem",
        ":jaxlib_ffi_headers",
    ],
)

nanobind_extension(
    name = "_clqr_cuda",
    srcs = ["python/jax_ffi_cuda_module.cc"],
    copts = select({
        ":linux": [
            "-Wno-pedantic",
            "-Wno-sign-compare",
            "-Wno-unused-parameter",
        ],
        ":macos": [
            "-Wno-gnu-zero-variadic-macro-arguments",
            "-Wno-nested-anon-types",
            "-Wno-sign-compare",
            "-Wno-unused-parameter",
            "-Wno-zero-length-array",
        ],
        "//conditions:default": [],
    }),
    linkstatic = True,
    target_compatible_with = requires_cuda(),
    deps = [
        ":jax_ffi_cuda_handler",
        ":jaxlib_ffi_headers",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "python_binding_test",
    srcs = ["tests/python_binding_test.py"],
    data = [":_clqr"],
    deps = [requirement("numpy")],
)

py_library(
    name = "clqr_jax_python",
    srcs = [
        "python/clqr/__init__.py",
        "python/clqr/jax.py",
    ],
)

py_test(
    name = "jax_binding_test",
    srcs = ["tests/jax_binding_test.py"],
    data = [
        ":_clqr",
        ":_clqr_jax_cpu",
    ],
    main = "tests/jax_binding_test.py",
    deps = [
        ":clqr_jax_python",
        requirement("jax"),
        requirement("numpy"),
    ],
)

py_test(
    name = "jax_cuda_binding_test",
    srcs = ["tests/jax_cuda_binding_test.py"],
    data = [
        ":_clqr",
        ":_clqr_cuda",
        ":_clqr_jax_cpu",
    ],
    main = "tests/jax_cuda_binding_test.py",
    tags = [
        "manual",
        "requires-gpu",
    ],
    target_compatible_with = requires_cuda(),
    deps = [
        ":clqr_jax_python",
        requirement("jax"),
        requirement("jax-cuda12-plugin"),
        requirement("jax-cuda12-pjrt"),
        requirement("numpy"),
    ],
)

cc_binary(
    name = "clqr_benchmark",
    srcs = ["benchmarks/clqr_benchmark.cc"],
    copts = ["-DNDEBUG"],
    deps = [":clqr"],
)
