module(name = "constrained_lqr_elimination", version = "0.1.0")

bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "robin-map", version = "1.3.0")
bazel_dep(name = "nanobind_bazel", version = "2.6.1")

bazel_dep(name = "rules_python", version = "1.7.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)
use_repo(python, python = "python_versions")
