module(
    name = "constrained_lqr_elimination",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "robin-map", version = "1.3.0")
bazel_dep(name = "nanobind_bazel", version = "2.6.1")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.13",
)
use_repo(python, python = "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "clqr_pip",
    python_version = "3.13",
    requirements_lock = "//:requirements.lock",
)
use_repo(pip, "clqr_pip")
